# portal_project

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile
include/: help.md
include/portal/: random.hpp
include/portal/drawing/: color.hpp  image.hpp
include/portal/math/: fs_vector.hpp  math.hpp
source/: CMakeLists.txt  win.cpp
test/: CMakeLists.txt  test_drawing.cpp  test_math.cpp
